--- a/archives.css
+++ b/archives.css
@@ -18,12 +18,10 @@ h3{
     color: black;
 }
 .boxlogo {
-    width: 60px;
-    height: 60px;
+    width: 20%;
 }
 .boxtitle {
-    width: 300px;
-    height: 60px;
+    width: 80%;
 }
 img {
     height: 100%;
