--- a/archives.css
+++ b/archives.css
@@ -20,14 +20,13 @@ h3{
 
 .box{
     display: flex;
+    align-items: flex-start;
 }
 .toplogo{
     width: 30%;
-    height: 60px;
 }
 .toptitle
     width: 70%;
-    height: 60px;
 }
 .boxissue{
     width: 20%;
