--- a/archives.css
+++ b/archives.css
@@ -1,39 +1,67 @@
 @charset "UTF-8";
-#subject{
-    color :black;
-    font-size: 120%;
-}
 h1{
     font-weight: bold;
     font-size: 150%;
-    background-color: green;
+    background-color: #81f79f;
     color: black;
 }
+
 h2{
+    font-weight: bold:
     font-size: 120%;
     color: black;
 }
+
 h3{
+    font-weight: bold;
     font-size: 100%;
     color: black;
 }
 
+.main-text{
+    font-size: 100%
+    font-weight: normal;
+    color: black;
+}
+
+.align-right{
+    text-align: right;
+}
+.align-left{
+    text-align: left;
+}
+
 .box{
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     width: 100%;
+}
+
+.box-logo{
+    flex-basis: 30%;
+}
+
+.box-title{
+    flex-basis: 70%;
+}
+
+.box-date{
+    flex-basis: 20%;
     height: auto;
 }
-.toplogo{
-    width: 30%;
+
+.box-contents{
+    flex-basis: 80%;
+    height: auto;
 }
-.toptitle
-    width: 70%;
+
+.box-email{
+    border: 1px solid #008b8b;
+    background-color: #e0ffff;
+    align-items: center;
 }
-.boxissue{
-    width: 40%;
-}
-.boxdata{
-    width: 60%;
-}
+
+
 
 
